Remove lombok, fix some things